# struct_post

./: .readthedocs.yaml  LICENSE  README.md  Sample Data.xlsx  postanalysis.py  pyproject.toml
Coupon Test Data/: Tensile Test_Neebajan_Alan_1.csv  Tensile Test_Neebajan_Alan_10.csv  Tensile Test_Neebajan_Alan_11.csv  Tensile Test_Neebajan_Alan_12.csv  Tensile Test_Neebajan_Alan_13.csv  Tensile Test_Neebajan_Alan_14.csv  Tensile Test_Neebajan_Alan_15.csv  Tensile Test_Neebajan_Alan_16.csv  Tensile Test_Neebajan_Alan_17.csv  Tensile Test_Neebajan_Alan_18.csv  Tensile Test_Neebajan_Alan_19.csv  Tensile Test_Neebajan_Alan_2.csv  Tensile Test_Neebajan_Alan_20.csv  Tensile Test_Neebajan_Alan_21.csv  Tensile Test_Neebajan_Alan_22.csv  Tensile Test_Neebajan_Alan_3.csv  Tensile Test_Neebajan_Alan_4.csv  Tensile Test_Neebajan_Alan_5.csv  Tensile Test_Neebajan_Alan_6.csv  Tensile Test_Neebajan_Alan_7.csv  Tensile Test_Neebajan_Alan_8.csv  Tensile Test_Neebajan_Alan_9.csv  test__20250509_94834_1.csv  test__20250509_94834_2.csv  test__20250509_94834_3.csv  test__20250509_94834_4.csv  test__20250509_94834_5.csv  test__20250509_94834_6.csv  test__20250509_94834_7.csv  test__20250509_94834_8.csv
docs/source/: beam.md  conf.py  coupon.md  index.md
docs/source/notebooks/: S2.csv  S3.csv  S4.csv  S5.csv  Sample Data.xlsx  tutorial.ipynb
struct_post/: __init__.py  beam.py  coupon.py  read_lvm_file.py
