[project]
name = "struct_post"
version = "0.1.7"
description = "A module designed to analyse common structural test results."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "requests>=2.32.5",
]

[project.optional-dependencies]
doc = [
    "sphinx>=8.0",
    "myst-parser>=4.0.1",
    "nbsphinx>=0.9.7",
]
